--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.Neighbourhood"
         tools:targetApi="31">
         <activity
+            android:name=".UserHelpdeskActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UserComplainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UserEventsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UserMaintenanceActivity"
+            android:exported="false" />
+        <activity
             android:name=".AdminHomeActivity"
             android:exported="false" />
         <activity
