--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
 
     <application
         android:allowBackup="true"
@@ -14,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Neighbourhood"
         tools:targetApi="31">
+        <activity
+            android:name=".AdminEventsActivity"
+            android:exported="false" />
         <activity
             android:name=".AdminMaintananceActivity"
             android:exported="false" />
@@ -34,10 +39,13 @@
             android:exported="false" />
         <activity
             android:name=".AdminHomeActivity"
-            android:exported="false" />
+            android:exported="false">
+
+        </activity>
         <activity
             android:name=".UserHomeActivity"
-            android:exported="false" />
+            android:exported="false">
+        </activity>
         <activity
             android:name=".AdminSignupActivity"
             android:exported="false" />
