--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
-
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Neighbourhood"
         tools:targetApi="31">
+        <activity
+            android:name=".BudgetActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UserComplainNewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AboutUSActivity"
+            android:exported="false" />
         <activity
             android:name=".AdminEventsActivity"
             android:exported="false" />
@@ -39,13 +47,10 @@
             android:exported="false" />
         <activity
             android:name=".AdminHomeActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".UserHomeActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".AdminSignupActivity"
             android:exported="false" />
